<resources>
    <string name="app_name">Alarm Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="NewAlarm_text">Create New Alarm</string>\
    <string name="Delete_text">Delete Alarm</string>
    <string name="Exit_text">Exit</string>
    <string name="title_activity_set_alarm_screen">SetAlarmScreen</string>
    <string name="title_activity_alarm_receiver">AlarmReceiver</string>
    <string name="title_activity_calculation">Calculation</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="title_activity_go_to_news">GoToNews</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_list">List</string>
</resources>
