<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@mipmap/main_screen_bg">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewAlarm_text"
        android:id="@+id/button_newalarm"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:width="300dp"
        android:textColor="#fdff3005"
        android:background="@android:color/transparent"
        android:textSize="30dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete_text"
        android:id="@+id/button_delete"
        android:layout_below="@+id/button_newalarm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:width="300dp"
        android:textColor="#fdff3005"
        android:background="@android:color/transparent"
        android:textSize="30dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exit_text"
        android:id="@+id/button_exit"
        android:layout_below="@+id/button_delete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:width="300dp"
        android:textColor="#fdff3005"
        android:background="@android:color/transparent"
        android:textSize="30dp"
        android:onClick="onClick"/>
</RelativeLayout>
